--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,16 +48,16 @@
     <% end %>
 
     <%= yield %>
-    
+
     <br class="clr" />
 
   </div>
     </div>
   <div id="footer">
     <div class="container">
-      <b>Footer Here</b>
+      <b>Teachers</b>
       <br />
-      <%= link_to 'Link', '#' %>
+      <%= link_to 'Teach a Course', new_instructor_course_path %>
     </div>
   </div>
 
